Minor updates - testing fix for favicon bug
Fixed visual bug with footer expanding too far when terms are not loaded. Attempting to fix issue with favicon not displaying correctly.

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -111,6 +111,7 @@ footer{
     background: #222;
     margin-top: auto;
     border-top: 2px solid rgb(208, 171, 109);
+    max-height: 3em;
 }
 
 /* ***************** */
